--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,32 @@
-.App {
+/* .App {
   text-align: center;
   
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
-}
+} */
+
 /* write your parent styles in here for your App.js */
-.character-name {
+/* .character-name {
   background-color: white;
   width: 90%;
   height: 100%;
   border-radius: 8px;
-}
-.character-container {
+} */
+
+/* .character-container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
+} */
 
-.chars {
+/* .chars {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
+} */
